# genephys

./: .gitignore  README.md  decoders.py  graphics.py  sampler.py  setup.cfg  setup.py
examples/jupyter_notebooks/: examples.ipynb
genephys/: decoders.py  graphics.py  sampler.py
genephys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genephys/genephys.egg-info/: SOURCES.txt
genephys/tests/: test_genephys.py
