[metadata]
name = genephys
version = 0.1
author = Diego Vidaurre
author_email = dvidaurre@cfin.au.dk
description = Generative model of empirical electrophysiological signals
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/vidaurre/genephys
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =genephys
packages = find:
python_requires = >=3.10

[options.packages.find]
where = genephys